src/test/resources/valid_tests/SimpleNetworkLinear.cnna
architecture SimpleNetworkLinear(inputs=10, classes=2){
    def input Q(-oo:+oo)^{C:inputs} in
    def output Q(-oo:oo)^{C:classes} out
    
    in ->
    FullyConnected(units=64, no_bias=true) ->
    Tanh() ->
    FullyConnected(units=classes, no_bias=true) ->
    out
}