src/test/resources/invalid_tests/UnknownIO.cnna
architecture UnknownIO{
    in ->
    FullyConnected(units=64) ->
    Tanh() ->
    FullyConnected(units=10) ->
    Softmax() ->
    out
}